more alignment fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+:root {
+  --nav-height: 100px;
+  --primary-color: rgb(255, 92, 92);
+  --page-width: 750px;
+}
+
 body {
   margin: 0;
   font-family: Poppins, sans-serif;
@@ -11,16 +17,22 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: rgb(255, 92, 92);
+  height: var(--nav-height);
+  background-color: var(--primary-color);
+  box-sizing: border-box;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
   color: white;
   padding: 1rem 2rem;
   z-index: 1000;
 }
 
 section {
-  max-width: 800px;
+  max-width: var(--page-width);
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 5rem 1rem;
 }
 
 h2 {
@@ -37,7 +49,7 @@ footer {
 .title {
   font-size: 100px;
   font-weight: 900;
-  color: rgb(255, 92, 92);
+  color: var(--primary-color);
 }
 
 .fade-in {
@@ -75,10 +87,10 @@ footer {
 }
 
 #preloader {
-  top: 0;
+  top: var(--nav-height);
   left: 0;
   position: relative;
-  height: 100vh;
+  height: calc(100vh - var(--nav-height));
   width: 100%;
   z-index: 100;
   overflow: hidden;
@@ -88,7 +100,7 @@ footer {
   top: 0;
   left: 0;
   position: relative;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   z-index: 100;
   display: flex;
@@ -103,10 +115,10 @@ footer {
   position: absolute;
   padding: 0 2rem;
   box-sizing: border-box;
-  top: 40px;
+  top: 30px;
   opacity: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   text-align: center;
   justify-content: center;
@@ -155,7 +167,7 @@ svg {
   transform: translate(-50%, -50%);
   transition: left 0.7s ease, opacity 0.5s ease;
   opacity: 0;
-  max-width: 800px;
+  max-width: var(--page-width);
   max-height: 100vh;
   pointer-events: none;
 }
